NetBSD Problem Report #38303

From martin@duskware.de  Wed Mar 26 10:33:42 2008
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 38D8363B293
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 26 Mar 2008 10:33:42 +0000 (UTC)
Message-Id: <20080326103339.B8E7A33ACA@mail.duskware.de>
Date: Wed, 26 Mar 2008 11:33:39 +0100 (CET)
From: martin@duskware.de
Reply-To: martin@duskware.de
To: gnats-bugs@gnats.NetBSD.org
Subject: alpha has MD ddb commands w/o help
X-Send-Pr-Version: 3.95

>Number:         38303
>Category:       port-alpha
>Synopsis:       alpha has MD ddb commands w/o help
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    port-alpha-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Mar 26 10:35:00 +0000 2008
>Closed-Date:    Tue Jun 08 06:15:30 +0000 2010
>Last-Modified:  Tue Jun 08 06:15:30 +0000 2010
>Originator:     Martin Husemann
>Release:        NetBSD 4.99.58
>Organization:
The NetBSD Foundation
>Environment:
System: NetBSD sunny-weather.duskware.de 4.99.58 NetBSD 4.99.58 (SUNNY) #74: Tue Mar 25 13:49:05 CET 2008 martin@night-porter.duskware.de:/usr/src/sys/arch/sparc64/compile/SUNNY sparc64
Architecture: sparc64
Machine: sparc64
>Description:

alpha has "mach" ddb commands that have no help for options DDB_VERBOSE_HELP.

>How-To-Repeat:
code inspection

>Fix:
Help is very easy to add once you know what the "mach" commands actually do.
Examples can be found in sparc64 or sh3 db_interface.c. While checking these
commands, please also verify the ddb(4) manual page is correct.

>Release-Note:

>Audit-Trail:
From: matthew green <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/38303 CVS commit: src
Date: Tue, 8 Jun 2010 06:14:58 +0000

 Module Name:	src
 Committed By:	mrg
 Date:		Tue Jun  8 06:14:58 UTC 2010

 Modified Files:
 	src/share/man/man4: ddb.4
 	src/sys/arch/alpha/alpha: db_interface.c

 Log Message:
 properly document alpha ddb "mach" commands.  PR#38303.


 To generate a diff of this commit:
 cvs rdiff -u -r1.138 -r1.139 src/share/man/man4/ddb.4
 cvs rdiff -u -r1.31 -r1.32 src/sys/arch/alpha/alpha/db_interface.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Tue, 08 Jun 2010 06:15:30 +0000
State-Changed-Why:
done.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.