properly document alpha ddb "mach" commands.  PR#38303.